# license-plate-detector

./: CMakeLists.txt  README.md  gitignore  script.py  template_sharpener.py
src/: CMakeLists.txt  FileParser.cpp  FileParser.hpp  Image.cpp  Image.hpp  ImageProcessor.cpp  ImageProcessor.hpp  Interface.cpp  Interface.hpp  Map.hpp  VideoCapture.cpp  VideoCapture.hpp  main.cpp
